新增8个约1年历史币种测试

--- a/backtest/EDA/perfEDA.ipynb
+++ b/backtest/EDA/perfEDA.ipynb
@@ -79,6 +79,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# V3版本，8个约1年历史币种，每次选er最大1个币"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = '../testSFUDFXLT/perf/perf_v3/'\n",
+    "# perf(path,'annualizedReturn')\n",
+    "# perf(path,'sharpeRatio')\n",
+    "# perf(path,'maxDrawdown')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# V3版本，10个小币种，每次选er最大1个币"
    ]
   },
