--- a/backtest/EDA/perfEDA-BBELB-ARTrader.ipynb
+++ b/backtest/EDA/perfEDA-BBELB-ARTrader.ipynb
@@ -189,7 +189,7 @@
    "hash": "d558fcbcae753030a1bd3456493b39e175be1a278dd06b3f5de1d2fb964cdcf7"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -203,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
